--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.14.0",
+    "lenis": "^1.3.8",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
